@@ -108,7 +108,7 @@ int	PROC_MEMORY(const char *cmd, const char *param, unsigned flags, AGENT_RESULT
 
 	while (NULL != (entries = readdir(dir)))
 	{
-		if (-1 == fd)
+		if (-1 != fd)
 		{
 			close(fd);
 			fd = -1;
@@ -151,7 +151,7 @@ int	PROC_MEMORY(const char *cmd, const char *param, unsigned flags, AGENT_RESULT
 	}
 
 	closedir(dir);
-	if (-1 == fd)
+	if (-1 != fd)
 		close(fd);
 
 	if (do_task == DO_AVG)
@@ -225,7 +225,7 @@ int	PROC_NUM(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *r
 
 	while (NULL != (entries = readdir(dir)))
 	{
-		if (-1 == fd)
+		if (-1 != fd)
 		{
 			close(fd);
 			fd = -1;
@@ -258,7 +258,7 @@ int	PROC_NUM(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *r
 	}
 
 	closedir(dir);
-	if (-1 == fd)
+	if (-1 != fd)
 		close(fd);
 
 	SET_UI64_RESULT(result, proccount);
